환경 설정: 기본 프로젝트 환경 구성 완료
- .env.template: WandB API 키 템플릿 추가
- .gitignore: 로그, 모델, 캐시 파일 제외 규칙 업데이트
- pyproject.toml: 의존성 라이브러리 추가 (wandb, seaborn 등)
- uv.lock: 패키지 잠금 파일 생성

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,11 @@ dependencies = [
     "ipykernel",
     "ipython",
     "augraphy>=8.2.6",
-    "nbconvert==7.12.0"
+    "nbconvert==7.12.0",
+    # Experiment Tracking
+    "wandb",
+    "python-dotenv",
+    "seaborn",
+    # System Monitoring
+    "psutil"
 ]
