--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ data/submissions/*.csv
 logs/*
 !logs/init.txt
 *.out
+
+# WandB files
+wandb/
+*.wandb
+
 ### <<< Custom gitignore <<<
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,python,venv,jupyternotebooks,macos,windows
