환경 설정: .gitignore에 Obsidian 폴더 제외 규칙 추가
- .obsidian/: Obsidian 노트 관리 도구 설정 파일 제외
- 개인별 노트 환경 설정이 Git에 포함되지 않도록 설정

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ logs/*
 wandb/
 *.wandb
 
+# Obsidian notes
+.obsidian/
+
 ### <<< Custom gitignore <<<
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,python,venv,jupyternotebooks,macos,windows
