프로젝트 환경 설정 및 의존성 관리 개선
- UV 패키지 매니저로 현대적 의존성 관리 도입
- 플랫폼별 requirements 파일 추가 (macOS, Ubuntu CPU/GPU)
- .gitignore 포괄적 업데이트 (WandB, 모델, 로그 등)
- Python 3.11.13 환경 고정
- 자동화 설정 스크립트 추가 (setup.sh, check_environment.sh)
- 대화형 메뉴 시스템 구현 (menu.sh)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ codes/practice/*
 # 2. data/submissions 디렉토리: 모든 .csv 파일 무시
 data/submissions/*.csv
 
+# 3. 대회 데이터셋 - 이미지만 용량 이슈로 제외
+data/train/
+data/test/
+
+# 4. 임시 폴더 - 개발 중 생성되는 임시 파일들
+temp/
+
 !init.txt
 !__init__.py
 
