대용량 모델 파일을 Git 추적에서 제외
- best_model.pth (243MB) 파일을 Git에서 제거
- .gitignore에 모델 파일 패턴 추가
- 로컬 파일은 유지하되 원격 저장소 업로드 방지
- WandB Artifacts로 모델 버전 관리 권장

--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,python,venv,jupyternotebooks,macos,windows
+# 대용량 모델 파일들 (WandB Artifacts로 관리)
+models/*.pth
+models/*.pt
+models/*.onnx
