설정 개선: .gitignore 업데이트 및 메뉴 스크립트 향상
- .gitignore: 추가 무시 패턴 설정
- menu.sh: OCR 통합 메뉴 옵션 추가 및 크로스 플랫폼 지원 강화

--- a/.gitignore
+++ b/.gitignore
@@ -306,3 +306,9 @@ $RECYCLE.BIN/
 models/*.pth
 models/*.pt
 models/*.onnx
+
+# OCR 캐시 파일들 (플랫폼별로 다를 수 있음)
+data/ocr_cache/
+
+# 플랫폼별 실행 파일
+run_ubuntu.sh
